# cdpr-simulation

./: .gitignore  LICENSE  README.md
src/cdpr_gazebo/: CMakeLists.txt  package.xml
src/cdpr_gazebo/include/cdpr_gazebo/: CdprGazeboPlugin.h  Filter.h  JointForceCalculator.h  Pid.h
src/cdpr_gazebo/include/rai/: RAI_Tensor.hpp  RAI_core
src/cdpr_gazebo/include/rai/algorithm/: AG_tree.hpp  CMAES.hpp  DDPG.hpp  PPO.hpp  RDPG.hpp  RPPO.hpp  SPG_gae.hpp  TRPO_gae.hpp
src/cdpr_gazebo/include/rai/algorithm/tests/: CMakeLists.txt  testDeepDeterministicPolicyGradient.cpp
src/cdpr_gazebo/include/rai/algorithm/tests/resources/: generate_Qfunction.py  generate_policy.py  run_python_scripts.sh
src/cdpr_gazebo/include/rai/common/: VectorHelper.hpp
src/cdpr_gazebo/include/rai/experienceAcquisitor/: Acquisitor.hpp  AcquisitorCommonFunc.hpp  ExperienceTupleAcquisitor.hpp  ExperienceTupleAcquisitor_Parallel.hpp  ExperienceTupleAcquisitor_Sequential.hpp  TrajectoryAcquisitor.hpp  (+2 more)
src/cdpr_gazebo/include/rai/function/tensorflow/pythonProtobufGenerators/test/: CMakeLists.txt  testPBgenerators_Policy.cpp  testPBgenerators_Q.cpp  testPBgenerators_Stochpol.cpp  testPBgenerators_V.cpp  testPBgenerators_multiGPU.cpp
src/cdpr_gazebo/launch/: cdpr_gazebo.launch
src/cdpr_gazebo/msg/: PlatformState.msg  WireStates.msg
src/cdpr_gazebo/sdf/: cube.sdf  cube.yaml
src/cdpr_gazebo/src/: .CdprGazeboPlugin.cpp.swp  CdprGazeboPlugin.cpp  JointForceCalculator.cpp  Pid.cpp  RaiCompileTest.cpp  sinevelocitytest.cpp  squarepositiontest.cpp  squarevelocitytest.cpp
(+93 files in other folders)
